# cUR

./: CMakeLists.txt  Kconfig  MANIFEST.in  Makefile  README.md  uUR.c
.github/workflows/: test.yml
python/: uUR.c
src/: crc32.c  crc32_slice_table.h  fountain_decoder.c  fountain_decoder.h  fountain_encoder.c  fountain_encoder.h  fountain_utils.c  ur_decoder.c  ur_decoder.h  ur_encoder.c  utils.c
src/types/: output.h
tests/: test_ur_envelope_api.c  test_ur_weighted_progress.c
tests/esp-idf-smoke/components/cUR/: CMakeLists.txt
